# eucalyptus-twig

./: Cargo.toml  README.md  flake.nix
src/: config.rs  main.rs  power_menu.rs
src/widget/: bluetooth.rs  clock.rs  display.rs  mod.rs  power.rs  power_menu.rs  power_profile.rs  quit.rs  volume.rs  workspaces.rs
src/widget/hyprland/: workspaces.rs
