[package]
name = "eucalyptus-twig"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = { version = "0.17.4", features = ["bluetoothd"] }
futures = "0.3.31"
gpui = { git = "https://github.com/zed-industries/zed.git", default-features = false, features = ["wayland"] }
gpui-net = { git = "https://github.com/zed-industries/zed.git", package = "net" }
gpui_tokio = { git = "https://github.com/zed-industries/zed.git" }
lyon = "1.0.16"
serde = "1.0.228"
serde_json = "1.0.147"
time = { version = "0.3.44", default-features = false, features = ["formatting", "local-offset"] }
